manifests/filter/filter-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: filter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filter 
  template:
    metadata:
      labels: 
        app: filter 
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-filter
        image:  rs/filter:latest
        ports:
          - name: http
            containerPort: 5200
        resources:
          requests: 
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
      - name: rs-filter-plugin
        image:  rs/filter-plugin:latest
        ports:
          - name: http
            containerPort: 50051
        resources:
          requests: 
            cpu: 6000m
            memory: 4096Mi
          limits:
            cpu: 8000m
            memory: 8192Mi
        volumeMounts:
          - name: persistent-storage
            mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
