manifests/filter/filter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filter
spec: 
  type: ClusterIP
  selector:
    app: filter
  ports:
  - name: http
    port: 5200
    targetPort: 5200
